Fixed horizontal scrolling problem in sidebar

--- a/main.css
+++ b/main.css
@@ -70,9 +70,9 @@ textarea {
   border-bottom: solid;
   border-color: var(--sidebar-text-color);
   border-width: 1px;
-  padding-right: 10px;
   display: flexbox;
   flex-direction: row;
+  position: sticky;
 
 }
 
